fix: table actions column takes up too much space

--- a/core/src/table/actions/actions.module.css
+++ b/core/src/table/actions/actions.module.css
@@ -3,3 +3,7 @@
 	align-items: center;
 	gap: 16px;
 }
+
+.fitContent {
+	width: 0px;
+}
